<resources>
    <string name="app_name">DonatePlus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="DP_Tagline_Text">Offering you a portal into convenient donating.</string>
    <string name="amd_notifications">Notifications</string>
    <string name="amd_donations">My Donations</string>
    <string name="amd_homes">Children\'s Homes</string>
    <string name="amd_donate">Donate</string>
    <string name="amd_share">Share</string>
    <string name="amd_settings">Settings</string>
    <string name="amd_about">About</string>
    <string name="amd_rewards">Rewards</string>
    <string name="share_message">Hi there! Put a smile today on someones face by simply going to the playstore and downloading DonatePlus " +
                "app and making a worthy donation to a needy child! :)</string>
    <string name="thumbnail">Thumbnail</string>

    <string name="mm_sign_out">Sign out</string>

    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home_map">Map</string>

    <string name="type_prompt">Select a Type of Donation</string>
    <string name="home_prompt">Select a Children\'s Home</string>

    <string-array name="type_array">
        <item>Food</item>
        <item>Clothes</item>
        <item>Money</item>
    </string-array>

    <string-array name="home_array">
        <item>Loading Homes ...</item>
    </string-array>

    <string name="notf_sub">You\'ll soon be able to stay up-to-date with all your donations with real-time push notifications!</string>

</resources>
